# hw10

./: pyproject.toml
part1/: main.py
part2/: main.py  user_interface.py
part2/database/: fill_fake_data.py  models.py  repository.py
